--- a/src/components/Graph/style.css
+++ b/src/components/Graph/style.css
@@ -1,4 +1,4 @@
-.main {
+.graph-main {
  max-width:100%;
  width:100%;
  height:21px;
@@ -6,22 +6,22 @@
  border-radius: 7px;
 }
 
-.item{
+.graph-item{
  height: 100%;
 }
 
-.desconto-inss{
+.graph-desconto-inss{
  width: 0%;
  border-radius: 7px 0 0 7px;
  background-color: rgb(204, 135, 32);
 }
 
-.desconto-irpf{
+.graph-desconto-irpf{
  width: 0%;
  background-color: rgb(107, 30, 30);
 }
 
-.salario-liquido{
+.graph-salario-liquido{
  width: 100%;
  border-radius: 0px 7px 7px 0px;
  background-color: rgb(49, 146, 81);
